--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,97 +1,22 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<TabHost
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@android:id/tabhost"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:layout_weight="1">
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="vertical">
-		<TabWidget
-			android:id="@android:id/tabs"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"/>
-			<FrameLayout
-				android:id="@android:id/tabcontent"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent">
-			<!-- 定义第一个标签页的内容 -->
-<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"   
     android:orientation="vertical"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:gravity="center"
-	android:showDividers="beginning"
-	android:background="#ffffff"
-	>
-	<LinearLayout 
-	    android:orientation="horizontal"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content">
-	    <Button
-	        android:id="@+id/newest"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:background="#ffcc66"
-	        android:text="最新"
-	        android:textColor="#ffffff"
-	        android:textSize="18sp"
-	        
-	        />
-	    <Button
-	        android:id="@+id/hot"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:layout_marginLeft="-10dip"
-	        android:background="#33cc33"
-	        android:text="热门"
-	        android:textColor="#ffffff"
-	        android:textSize="18sp"
-	        />
-	    <Button
-	        android:id="@+id/message"
-	        android:layout_height="wrap_content"
-	        android:layout_width="match_parent"
-	        android:layout_weight="1"
-	        android:layout_marginLeft="-10dip"
-	        android:background="#0066ff"
-	        android:text="消息"
-	        android:textColor="#ffffff"
-	        android:textSize="18sp"
-	        />
-	    
-	</LinearLayout> -->
-				<LinearLayout 
-				    android:id="@+id/tab01">
-					<ListView 
-					    android:id="@+id/content_new"
-					    android:layout_width="match_parent"
-					    android:layout_height="match_parent"
-					    android:layout_marginBottom="22dp">
-					</ListView>
-				</LinearLayout>
-				<LinearLayout 
-				    android:id="@+id/tab02">
-				    <ListView 
-				        android:id="@+id/content_hot"
-				        android:layout_width="match_parent"
-					    android:layout_height="match_parent"
-					    android:layout_marginBottom="22dp">
-				    </ListView>
-				</LinearLayout>
-				<LinearLayout 
-				    android:id="@+id/tab03">
-				    <ListView 
-				        android:id="@+id/content_message"
-				        android:layout_width="match_parent"
-					    android:layout_height="match_parent"
-					    android:layout_marginBottom="22dp">
-				    </ListView>
-				</LinearLayout>
-			</FrameLayout>
-	</LinearLayout>
-</TabHost>
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    >
+    <ViewFlipper   
+    android:id="@+id/myViewFlipper"  
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+    <include  
+            android:id="@+id/newlayout"  
+            layout="@layout/newlayout" />  
+  
+        <include  
+            android:id="@+id/hotlayout"  
+            layout="@layout/hotlayout" />  
+        <include 
+            android:id="@+id/messagelayout"
+            layout="@layout/messagelayout"/> 
+	</ViewFlipper>   
+</FrameLayout>
